--- a/musica/index.html
+++ b/musica/index.html
@@ -28,8 +28,9 @@
       <div>
         <ol>
           <li class="li"><a href="./partituras.html">LECTURA DE PARTITURAS</a></li>
+          <li class="li"><a href="./solfeo.html">SOLFEO</a></li>
           <li class="li"><a href="./clasicos.html">TEMAS: CLÁSICOS</a></li>
-          >
+          
         </ol>
       </div>
     </section>
