--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
         <a href="#alInicio"><img src="./media/ESCUDOCARM.png" alt="" class="logoC"></a>
         <a href="euangelium/01formacion.html" class="nombre">APOLOGÍA </a>
         <a href="noviciado/01formacion.html" class="nombre">FORMACIÓN </a>
+       <button id="info-button" class="boton">SEMANA / DIA</button>
       </div>
-    </header> <br><br>
+    </header> <br><br><br><br>
+    <h2><div  id="semana-info"></div>  </h2>
     <!-- ******************************************************** -->
     <section id="">
       <img src="./media/PORTADA2023.jpeg" alt="">
     </section>
+    
     <!-- ******************************************************** -->
     <section>
       <footer class="footer">
@@ -34,6 +37,7 @@
   </footer>
 </section>
 <!-- ///////////////////////////////////////////////////////// -->
+ <script src="./javascript/numeroDeSemana.js"></script>
   </body>
 
 </html>
