--- a/musica/partituras.html
+++ b/musica/partituras.html
@@ -474,7 +474,7 @@
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary> </summary>
+      <summary>Acordes 7mos </summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
