--- a/noviciado/01formacion.html
+++ b/noviciado/01formacion.html
@@ -94,14 +94,17 @@
         <li> <span class="hora" class="hora">Ajedrez</span>
           <ul>
             <li><input type="checkbox" data-id="ajedrez">
-              <span>video1 y Aperturas</span>
+              <span>Noche M-J-S-D <br>
+                video1 y Aperturas</span>
+              
             </li>
           </ul></li>
            <!-- ++++++++++++++++++++++++++++++++ -->
         <li><span class="hora">Apología</span>
           <ul>
             <li> <input type="checkbox" data-id="apologia">
-           <span>   La Eucaristía padre Toro </span>
+           <span>Noche <br>
+            La Eucaristía padre Toro </span>
             </li>
           </ul>
           </li>
@@ -109,7 +112,9 @@
         <li><span class="hora">Canto</span>
           <ul>
             <li><input type="checkbox" data-id="canto">
-              <span>Tema 01</span>
+              <span>Tarde Ruta LMV <br>
+                Tema 01</span>
+
             </li>
           </ul>
            </li>
@@ -117,7 +122,8 @@
         <li><span class="hora">Cocina</span>
           <ul>
             <li><input type="checkbox" data-id="cocina">
-             <span> Aji de Gallina y videos USB</span>
+             <span>MedioDia <br>
+              Aji de Gallina y videos USB</span>
             </li>
           </ul>
            </li>
@@ -125,7 +131,8 @@
         <li><span class="hora">Corpus</span>
           <ul>
             <li><input type="checkbox" data-id="corpus">
-             <span> Actualizar video Super y diseño de Equipo de dominadas</span>
+             <span>Mañanas <br>
+              Diseño de Equipo de dominadas</span>
             </li>
           </ul>
            </li>
@@ -133,7 +140,8 @@
         <li><span class="hora">Física</span>
           <ul>
             <li><input type="checkbox" data-id="fisica">
-              <span>Buscar tutorial</span>
+              <span>Noche <br>
+                Buscar tutorial</span>
             </li>
           </ul>
            </li>
@@ -141,7 +149,8 @@
         <li><span class="hora">Idioma</span>
           <ul>
             <li><input type="checkbox" data-id="idioma">
-              <span>Construir primera tabla "Saludos" </span>
+              <span>Día <br>
+                Construir primera tabla "Saludos" </span>
             </li>
           </ul>
           </li>
@@ -149,7 +158,8 @@
            <li><span class="hora">Música</span>
             <ul>
               <li><input type="checkbox" data-id="musica">
-              <span>  Tutorial de Formación y Practica melodia 01</span>
+              <span>Noche LMV <br>
+                 Solfeo 1-2 y <br> Partitura 1: El lago de los Cisnes</span>
               </li>
             </ul>
              </li>
@@ -157,7 +167,8 @@
         <li><span class="hora">Películas</span>
           <ul>
             <li> <input type="checkbox" data-id="peliculas">
-            <span>  Brígida de Suecia y Poner numeración a Memo </span>
+            <span> Noche <br>
+               Brígida de Suecia y Poner numeración a Memo </span>
             </li>
           </ul>
           </li>
@@ -165,7 +176,8 @@
         <li><span class="hora">Programación</span>
           <ul>
             <li> <input type="checkbox" data-id="programacion">
-            <span>Tema 07 Directivas personalizadas</span>
+            <span>Noche (ver) Practica(dia) <br>
+              Tema 07 Directivas personalizadas</span>
             </li>
           </ul>
           </li>
