--- a/latin/saludos.html
+++ b/latin/saludos.html
@@ -5,34 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/style.css">
   <title>LATÍN</title>
-  <style>
-      span{
-      font-size: 1.5em;
-      color: brown;
-     
-    }
-
-    .ad>li{
-      padding-bottom: 1em;
-    }
-
-    table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 4em;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f4f4f4;
-        }
-        tr:nth-child(even) {
-            background-color: #f9f9f9;
-        }
-  </style>
 </head>
 <body>
   <p id="alInicio" class="principio"></p>
@@ -46,155 +18,36 @@
     </header> <br><br>
     <!-- ****************************************************************** -->
      <h1 class="cita">01 SALUDOS </h1>
-    <table>
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>SALUDAR</th>
-                <th>PERSONA</th>
-                <th>SALUTANT</th>
-                <th>PERSONA</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>Buenos días</td>
-                <td>Amor</td>
-                <td>SALVE</td>
-                <td>MEA</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Buenas tardes</td>
-                <td>Hermano</td>
-                <td>BONA VESPERA</td>
-                <td>FRATER</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>Buenas noches</td>
-                <td>Hermana</td>
-                <td>BONUS NOCTIS</td>
-                <td>SOROR</td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>Adiós</td>
-                <td>Hermanos</td>
-                <td>VALETE</td>
-                <td>FRATES</td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>El Sr este con Uds.</td>
-                <td>Hermanas</td>
-                <td>DOMINUS VOBISCUM</td>
-                <td>SORORIBUS</td>
-            </tr>
-            <tr>
-                <td>6</td>
-                <td>El Sr este contigo</td>
-                <td>Amigo</td>
-                <td>DOMINUS TECUM</td>
-                <td>AMICUS</td>
-            </tr>
-            <tr>
-                <td>7</td>
-                <td>La paz sea con Uds.</td>
-                <td>Amigos(as)</td>
-                <td>PAX VOBIS</td>
-                <td>AMICIS</td>
-            </tr>
-            <tr>
-                <td>8</td>
-                <td>La paz sea contigo</td>
-                <td>Hija</td>
-                <td>PAX VOBIS</td>
-                <td>AMICIS</td>
-            </tr>
-            <tr>
-                <td>9</td>
-                <td>Adiós </td>
-                <td>Hijo</td>
-                <td>PAX TIBI</td>
-                <td>FILIA</td>
-            </tr>
-            <tr>
-                <td>10</td>
-                <td>Mi corazón se alegra de verlos/las</td>
-                <td>Hijas </td>
-                <td>LAETATUR COR MEUM VOS VIDERE</td>
-                <td>FILIAE</td>
-            </tr>
-            <tr>
-                <td>11</td>
-                <td>Me alegra verlos/ las</td>
-                <td>Hijos </td>
-                <td>GAUDEO VOS VIDERE.</td>
-                <td>LIBERI</td>
-            </tr>
-            <tr>
-                <td>12</td>
-                <td>Mi corazón se alegra de verte.</td>
-                <td>Señor </td>
-                <td>LAETATUR COR MEUM TE VIDERE</td>
-                <td>DOMINE.</td>
-            </tr>
-            <tr>
-                <td>13</td>
-                <td>Me alegra verte.</td>
-                <td>Señora</td>
-                <td>GAUDEO TE VIDERE</td>
-                <td>DOMINA</td>
-            </tr>
-            <tr>
-                <td>14</td>
-                <td></td>
-                <td>Nieto</td>
-                <td></td>
-                <td>NEPOS</td>
-            </tr>
-            <tr>
-                <td>15</td>
-                <td></td>
-                <td>Nieta </td>
-                <td></td>
-                <td>NEPTIS</td>
-            </tr>
-            <tr>
-                <td>16</td>
-                <td></td>
-                <td>Señores </td>
-                <td></td>
-                <td>DOMINUS</td>
-            </tr>
-            <tr>
-                <td>17</td>
-                <td></td>
-                <td>Señoras </td>
-                <td></td>
-                <td>DOMINAE</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-        </tbody>
-    </table>
-    <br><br><hr>
-    <hr><br><br>
-    <h3 class="lema">COMBINACIONES</h3>
-    <p> <br>	"Adiós a todos y que el Señor esté con Uds."	<br> <b>"VALETE OMNES ET DOMINUS VOBISCUM."</b></p>
+<ol>
+
+  <li class="li" >	Hola 	amadísima	<br><span class="tab">	SALVE	DILECTISSIMA	</span>	</li>
+  <li class="li" >	Hola 	queridísima	<br><span class="tab">	SALVE	CARISSIMA	</span>	</li>
+  <li class="li" >	Hola 	mi vida	<br><span class="tab">	SALVE	VITA MEA	</span>	</li>
+  <li class="li" >	Hola 	Mi luz	<br><span class="tab">	SALVE	LUX MEA	</span>	</li>
+  <li class="li" >	Buenos días	Querid@	<br><span class="tab">	SALVE	DILECTA/DILECTE	</span>	</li>
+  <li class="li" >	Buenos días 	Querid@s	<br><span class="tab">	SALVETE, 	DILECTI	</span>	</li>
+  <li class="li" >	Buenas tardes	Hermano	<br><span class="tab">	BONA VESPERA	FRATER	</span>	</li>
+  <li class="li" >	La paz sea contigo.	Hermano 	<br><span class="tab">	PAX TECUM 	FRATER	</span>	</li>
+  <li class="li" >	Que Dios te bendiga.	hermano	<br><span class="tab">	BENEDICAT TE DEUS	FRATER	</span>	</li>
+  <li class="li" >	La paz sea con ustedes	Hermanos 	<br><span class="tab">	PAX VOBISCUM	FRATER	</span>	</li>
+  <li class="li" >	Que Dios los bendiga, 	Hermanos 	<br><span class="tab">	BENEDICAT VOS DEUS,	FRATER	</span>	</li>
+  <li class="li" >	Buenas noches	Hermana	<br><span class="tab">	BONUS NOCTIS	SOROR	</span>	</li>
+  <li class="li" >	Adiós	Hermanos	<br><span class="tab">	VALETE	FRATES	</span>	</li>
+  <li class="li" >	El Sr este con Uds.	Hermanas	<br><span class="tab">	DOMINUS VOBISCUM	SORORIBUS	</span>	</li>
+  <li class="li" >	El Sr este contigo	Amigo	<br><span class="tab">	DOMINUS TECUM	AMICUS	</span>	</li>
+  <li class="li" >	La paz sea con Uds.	Amigos(as)	<br><span class="tab">	PAX VOBIS	AMICIS	</span>	</li>
+  <li class="li" >	La paz sea contigo	Hija	<br><span class="tab">	PAX TIBI	FILIA	</span>	</li>
+  <li class="li" >	Adiós/ Que te vaya bien		<br><span class="tab">	BENE VALE 		</span>	</li>
+  <li class="li" >	Mi corazón se alegra de verlos/las	Hijas	<br><span class="tab">	COR MEUM GAUDET VOS VIDENS	FILIAE	</span>	</li>
+  <li class="li" >	Me alegra verlos/ las	Hijos	<br><span class="tab">	GAUDEO VOS VIDERE.	LIBERI	</span>	</li>
+  <li class="li" >	Mi corazón se alegra de verte.	Hermano	<br><span class="tab">	COR MEUM GAUDET VOS VIDENDO	FRATRES/SORORES	</span>	</li>
+  <li class="li" >	Me alegra verte.	Hermana 	<br><span class="tab">	GAUDEO TE VIDENS	SOROR	</span>	</li>
+  <li class="li" >		Nieto	<br><span class="tab">		NEPOS	</span>	</li>
+  <li class="li" >		Nieta	<br><span class="tab">		NEPTIS	</span>	</li>
+  <li class="li" >		Señores	<br><span class="tab">		DOMINUS	</span>	</li>
+  <li class="li" >		Señoras	<br><span class="tab">		DOMINAE	</span>	</li>
+  
+</ol>
+   
 </body>
 </html>
