--- a/noviciado/01formacion.html
+++ b/noviciado/01formacion.html
@@ -57,7 +57,12 @@
     <li><details class="select">
       <summary>06-07 Gratia et Propositum</summary>
   <ol>
-        <li>Oratio </li>
+        <li>Oratio <ol>
+          <li>Orar antes de actuar</li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ol></li>
         <li>Lectio
           <ol>
             <li>Objetivo es conocer al Señor</li>
@@ -72,7 +77,13 @@
           </ol>
         </li>
         <li>Evangelium</li> 
-        <li></li>
+        <li>Disce <ol>
+          <p>Asignar a todo:</p>
+          <li>Lugar </li>
+          <li>Tiempo</li>
+          <li>Medida (Progreso)</li>
+          <li></li>
+        </ol></li>
       </ol>
       <p>Agradecimiento y Proposito<br><br></p>
     </details></li>
@@ -89,12 +100,12 @@
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>08-10 Disce</summary>
+      <summary>08-11 Disce</summary>
       <ol id="taskList">
         <li> <span class="hora" class="hora">Ajedrez</span>
           <ul>
             <li><input type="checkbox" data-id="ajedrez">
-              <span>Noche M-J-S-D <br>
+              <span> 1 tema semanal en la noche<br>
                 video1 y Aperturas</span>
               
             </li>
@@ -103,7 +114,7 @@
         <li><span class="hora">Apología</span>
           <ul>
             <li> <input type="checkbox" data-id="apologia">
-           <span>Noche <br>
+           <span>Noches <br>
             La Eucaristía padre Toro </span>
             </li>
           </ul>
@@ -164,6 +175,15 @@
             </ul>
              </li>
              <!-- ++++++++++++++++++++++++++++++++ -->
+           <li><span class="hora">Oración</span>
+            <ul>
+              <li><input type="checkbox" data-id="musica">
+              <span>Día<br>
+                1° morada<br> </span>
+              </li>
+            </ul>
+             </li>
+             <!-- ++++++++++++++++++++++++++++++++ -->
         <li><span class="hora">Películas</span>
           <ul>
             <li> <input type="checkbox" data-id="peliculas">
@@ -186,17 +206,6 @@
     </ol> 
   <p><b>Aprender</b><br><br></p>
 </details></li>
-    <!-- ****************************** -->
-    <li><details class="select">
-      <summary>10-11 Praeparatio</summary>
-  <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ol>
-      <p>Preparación<br><br></p>
-    </details></li>
     <!-- ****************************** -->
     <li><details class="select">
       <summary>11-12.30 Exercitia</summary>
