--- a/noviciado/01formacion.html
+++ b/noviciado/01formacion.html
@@ -160,7 +160,7 @@
         <li><span class="hora">Idioma</span>
           <ul>
             <li><input type="checkbox" data-id="idioma">
-              <span>Día <br>
+              <span>Día ** Usarlo en casa e Iglesia <br>
                 Construir primera tabla "Saludos" </span>
             </li>
           </ul>
