--- a/oracion/CastilloInterior.html
+++ b/oracion/CastilloInterior.html
@@ -184,7 +184,7 @@
           <summary>El Discernimiento</summary>
           <ol>
             <li>Pecado es apartarse voluntaria y conscientemente de Dios</li>
-            <li> Lucha contra el pecado: Las tentaciones y distracciones del mundo exterior</li>
+            <li> Lucha contra el pecado: Las tentaciones. <br> "El enemigo nos dará 100 verdades si con eso nos puede hacer creer una sola mentira "</li>
             <li>Conocer las situaciones que nos llevan al pecado</li>
             <li>A mayor Libertad mejor Oración</li>
             <li>La Verdad está en la base de la Libertad</li>
@@ -195,7 +195,7 @@
             <li>Practicar el examen de conciencia diario</li>
             <li>Iniciar nuestro método de discernimiento</li>
           </ol>
-          <p><b><i>"Lo que más los mueva a amar eso haced"</i></b><br>Teresa de Jesús<br></p>
+          <p><br><br><b><i>"Lo que más los mueva a amar eso haced"</i></b><br>Teresa de Jesús<br></p>
         </details></li>
         <!-- ****************************** -->
         <li><details class="select">
@@ -213,7 +213,7 @@
         <!-- ****************************** -->
      
         <li><details class="select">
-          <summary></summary>
+          <summary>Metanoia</summary>
           <p><br><br></p>
         </details></li>
         <!-- ****************************** -->
@@ -272,7 +272,7 @@
         <!-- ****************************** -->
       </ol>
       <!-- ////////////////////////////////// -->
-      LA TENTACIÓN: El enemigo nos dará 100 verdades si con eso nos puede hacer creer una sola mentira<br>
+  
       <p>
 La humildad y la pobreza son las dos caras de la verdad. <br>
 “Altos muros son la pobreza” Sta. Clara de Asís.<br>
