--- a/latin/saludos.html
+++ b/latin/saludos.html
@@ -23,7 +23,6 @@
   <li class="li" >	Hola 	amadísima	<br><span class="tab">	SALVE	DILECTISSIMA	</span>	</li>
   <li class="li" >	Hola 	queridísima	<br><span class="tab">	SALVE	CARISSIMA	</span>	</li>
   <li class="li" >	Hola 	mi vida	<br><span class="tab">	SALVE	VITA MEA	</span>	</li>
-  <li class="li" >	Hola 	Mi luz	<br><span class="tab">	SALVE	LUX MEA	</span>	</li>
   <li class="li" >	Buenos días	Querid@	<br><span class="tab">	SALVE	DILECTA/DILECTE	</span>	</li>
   <li class="li" >	Buenos días 	Querid@s	<br><span class="tab">	SALVETE, 	DILECTI	</span>	</li>
   <li class="li" >	Buenas tardes	Hermano	<br><span class="tab">	BONA VESPERA	FRATER	</span>	</li>
@@ -35,6 +34,8 @@
   <li class="li" >	Adiós	Hermanos	<br><span class="tab">	VALETE	FRATES	</span>	</li>
   <li class="li" >	El Sr este con Uds.	Hermanas	<br><span class="tab">	DOMINUS VOBISCUM	SORORIBUS	</span>	</li>
   <li class="li" >	El Sr este contigo	Amigo	<br><span class="tab">	DOMINUS TECUM	AMICUS	</span>	</li>
+  <li class="li" >		Y con tu espíritu. (singular/plural) <br><span class="tab">		ET CUM SPIRITU TUO/VOBIS." 	</span>	</li>
+  <li class="li" >		El Señor también esté contigo. (Más general).	<br><span class="tab">		DOMINUS ETIAM TECUM	</span>	</li>
   <li class="li" >	La paz sea con Uds.	Amigos(as)	<br><span class="tab">	PAX VOBIS	AMICIS	</span>	</li>
   <li class="li" >	La paz sea contigo	Hija	<br><span class="tab">	PAX TIBI	FILIA	</span>	</li>
   <li class="li" >	Adiós/ Que te vaya bien		<br><span class="tab">	BENE VALE 		</span>	</li>
@@ -42,8 +43,7 @@
   <li class="li" >	Me alegra verlos/ las	Hijos	<br><span class="tab">	GAUDEO VOS VIDERE.	LIBERI	</span>	</li>
   <li class="li" >	Mi corazón se alegra de verte.	Hermano	<br><span class="tab">	COR MEUM GAUDET VOS VIDENDO	FRATRES/SORORES	</span>	</li>
   <li class="li" >	Me alegra verte.	Hermana 	<br><span class="tab">	GAUDEO TE VIDENS	SOROR	</span>	</li>
-  <li class="li" >		Nieto	<br><span class="tab">		NEPOS	</span>	</li>
-  <li class="li" >		Nieta	<br><span class="tab">		NEPTIS	</span>	</li>
+
   <li class="li" >		Señores	<br><span class="tab">		DOMINUS	</span>	</li>
   <li class="li" >		Señoras	<br><span class="tab">		DOMINAE	</span>	</li>
   
