--- a/lectio/intro.html
+++ b/lectio/intro.html
@@ -30,7 +30,7 @@
     <ol>
       <li class="li"><a href="./InterpretacionBasica.html">LA INTERPRETACIÓN BÍBLICA</a></li>
       <li class="li"><a href="./TextosMemo.html">TEXTOS MEMO</a></li>
-      <li class="li"><a href="../lectio/mateo.html">MATEO</a></li>
+      <li class="li"><a href="./mateo/index.html">MATEO</a></li>
       <li class="li"><a href="../lectio/marcos/index.html">MARCOS</a></li>
       <li class="li"><a href="../lectio/apocalipsis.html">APOCALIPSIS</a></li>
      </ol>
