--- a/noviciado/01formacion.html
+++ b/noviciado/01formacion.html
@@ -65,7 +65,7 @@
         </ol></li>
         <li>Lectio
           <ol>
-            <li>Objetivo es conocer al Señor</li>
+            <li>Objetivo es el Señor</li>
             <li>Solo se puede decidir desde la Verdad</li>
             <li>Dios es la verdad!!!!</li>
             <li>Cristo nos enseña a ser hombres: La Conversión</li>
@@ -80,12 +80,12 @@
         <li>Disce <ol>
           <p>Asignar a todo:</p>
           <li>Lugar </li>
-          <li>Tiempo</li>
+          <li>Hora</li>
           <li>Medida (Progreso)</li>
           <li></li>
         </ol></li>
       </ol>
-      <p>Agradecimiento y Proposito<br><br></p>
+      <p>Agradecimiento y Propósito<br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
@@ -106,7 +106,7 @@
           <ul>
             <li><input type="checkbox" data-id="ajedrez">
               <span> 1 tema semanal en la noche<br>
-                video1 y Aperturas</span>
+                VIDEO USB</span>
               
             </li>
           </ul></li>
@@ -115,7 +115,7 @@
           <ul>
             <li> <input type="checkbox" data-id="apologia">
            <span>Noches <br>
-            La Eucaristía padre Toro </span>
+            La Eucaristía VIDEO USB </span>
             </li>
           </ul>
           </li>
@@ -123,8 +123,8 @@
         <li><span class="hora">Canto</span>
           <ul>
             <li><input type="checkbox" data-id="canto">
-              <span>Tarde Ruta LMV <br>
-                Tema 01</span>
+              <span>Tarde Ruta  <br>
+                Tema VIDEO USB</span>
 
             </li>
           </ul>
@@ -134,7 +134,7 @@
           <ul>
             <li><input type="checkbox" data-id="cocina">
              <span>MedioDia <br>
-              Aji de Gallina y videos USB</span>
+              VIDEO USB</span>
             </li>
           </ul>
            </li>
@@ -143,7 +143,17 @@
           <ul>
             <li><input type="checkbox" data-id="corpus">
              <span>Mañanas <br>
-              Diseño de Equipo de dominadas</span>
+              PESAS: Preparar siguiente peso</span>
+            </li>
+          </ul>
+           </li>
+            <!-- ++++++++++++++++++++++++++++++++ -->
+        <li><span class="hora">Discretio</span>
+          <ul>
+            <li><input type="checkbox" data-id="corpus">
+             <span>Noche<br>
+             VIDEO USB </span> <br>
+              <a href="https://www.youtube.com/watch?v=ubp4J9exKpI&t=56s">EE2025</a>
             </li>
           </ul>
            </li>
@@ -152,7 +162,7 @@
           <ul>
             <li><input type="checkbox" data-id="fisica">
               <span>Noche <br>
-                Buscar tutorial</span>
+                VIDEO USB </span>
             </li>
           </ul>
            </li>
@@ -166,11 +176,20 @@
           </ul>
           </li>
            <!-- ++++++++++++++++++++++++++++++++ -->
+        <li><span class="hora">Lectio</span>
+          <ul>
+            <li><input type="checkbox" data-id="idioma">
+              <span>Día <br>
+                Mt 1,1-14</span>
+            </li>
+          </ul>
+          </li>
+           <!-- ++++++++++++++++++++++++++++++++ -->
            <li><span class="hora">Música</span>
             <ul>
               <li><input type="checkbox" data-id="musica">
               <span>Noche LMV <br>
-                 Solfeo 1-2 y <br> Partitura 1: El lago de los Cisnes</span>
+                 Solfeo 3-4 <br> </span>
               </li>
             </ul>
              </li>
@@ -179,7 +198,7 @@
             <ul>
               <li><input type="checkbox" data-id="musica">
               <span>Día<br>
-                1° morada<br> </span>
+               2° Morada<br> </span>
               </li>
             </ul>
              </li>
@@ -188,7 +207,7 @@
           <ul>
             <li> <input type="checkbox" data-id="peliculas">
             <span> Noche <br>
-               Brígida de Suecia y Poner numeración a Memo </span>
+               VIDEO USB PELÍCULAS </span>
             </li>
           </ul>
           </li>
@@ -197,7 +216,7 @@
           <ul>
             <li> <input type="checkbox" data-id="programacion">
             <span>Noche (ver) Practica(dia) <br>
-              Tema 07 Directivas personalizadas</span>
+              Tema 08</span>
             </li>
           </ul>
           </li>
@@ -216,7 +235,7 @@
         <li>Oculus</li>
         <li></li>
       </ol>
-      <p>Ejercicios<br><br></p>
+      <p>Ejercicios<br><br>Los cambios se harán de momento mínimo cada 4 meses <br>o hasta que se crea que se domina sin mucho esfuerzo </p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
