--- a/discretio/index.html
+++ b/discretio/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/style.css">
-  <title>Solfeo</title>
+  <title>Discretio</title>
 </head>
 <body>
   <p id="alInicio" class="principio"></p>
@@ -17,7 +17,7 @@
       </div>
     </header> <br><br>
     <!-- ****************************************************************** -->
-<h1 class="init">SOLFEO</h1>
+<h1 class="init">Discernimiento</h1>
   <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
       <br>EDITH STEIN</h3>
 
@@ -26,10 +26,10 @@
 
 <section id="0">
   <hr>
-  <h1> TEMAS</h1>
+  <h1>Temas </h1>
   <div>
     <ol>
-     <li class="li"><a href="#1">Método Rodolphe</a></li>
+     <li class="li"><a href="#1">Praefatio</a></li>
      <li class="li"><a href="#2"></a></li>
      <li class="li"><a href="#3"></a></li>
      <li class="li"><a href="#4"></a></li>
@@ -43,23 +43,43 @@
 </section>
 <!-- ****************************************************************** -->
 <section id="1">
-  <h2 class="subtitulo">Método Rodolphe</h2>
+  <h2 class="subtitulo">Introducción</h2>
    <!-- /////////////////////////////////////// -->
    <ol>
     <li><details class="select">
-      <summary>Clase 1-2</summary>
-     <a href="../media/musica/solfeo/01 SOLFEO - CLASES1-2.pdf">Ejercicios </a>
+      <summary>Biografía de Ignacio de Loyola</summary>
+      <p>San Ignacio de Loyola: Resumen de su Vida	<br>
+        Infancia y juventud:
+        San Ignacio de Loyola nació en 1491 en el País Vasco, España, en una familia noble. En su juventud fue un soldado valiente y ambicioso, al servicio del virrey de Navarra. Sin embargo, en 1521, durante la defensa de Pamplona contra los franceses, fue gravemente herido por una bala de cañón en la pierna.	<br>
+        Conversión y vida espiritual:
+        Durante su convalecencia en el castillo de Loyola, comenzó a leer libros sobre la vida de Cristo y de los santos, lo que despertó en él un profundo deseo de servir a Dios. Decidió abandonar su vida mundana y dedicarse a la vida espiritual. En 1522, peregrinó al santuario de Montserrat y luego pasó casi un año en Manresa, donde tuvo experiencias místicas que lo llevaron a escribir los primeros esbozos de sus Ejercicios Espirituales.	<br>
+        Estudios y fundación de la Compañía de Jesús:
+        Para prepararse mejor en su nueva misión, estudió en distintas universidades, incluyendo la de París, donde reunió a un grupo de compañeros con los que, en 1534, hizo votos de pobreza, castidad y servicio a la Iglesia. En 1540, el papa Paulo III aprobó oficialmente la Compañía de Jesús (Jesuitas), que se convirtió en una orden clave en la reforma católica y la evangelización.	<br>
+        Últimos años y legado:
+        San Ignacio pasó los últimos años de su vida en Roma, organizando la Compañía de Jesús y escribiendo las Constituciones Jesuitas, que marcaron la estructura y espiritualidad de la orden. Falleció el 31 de julio de 1556. Fue canonizado en 1622 por el papa Gregorio XV.	<br>
+        Legado	<br>
+        San Ignacio dejó una profunda huella en la Iglesia con sus Ejercicios Espirituales, que siguen siendo una guía fundamental para el discernimiento y la vida espiritual. Su orden, los Jesuitas, ha tenido un papel clave en la educación, la evangelización y la defensa de la fe.	<br><br>
+        <br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Clase 3-4</summary>
-      <a href="../media/musica/solfeo/CLASE 3.pdf">Ejercicios </a>
-      <p><br><br></p>
+      <summary>El Objetivo</summary>
+      <ol>
+        <li>Conocerlo a Él</li>
+        <li>Conocer la Voluntad de Dios</li>
+        <li>Transformarnos y transformar la realidad desde este conocimiento</li>
+        <li></li>
+      </ol>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Clase 5-6</summary>
-      <a href="../media/musica/solfeo/SOLFEO 05.pdf">Ejercicios </a>
+      <summary>Los Medios</summary>
+    <ol>
+      <li>Gradualidad</li>
+      <li>Perseverancia</li>
+      <li>Comunidad </li>
+      <li>Dirección espiritual</li>
+    </ol>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
@@ -67,17 +87,7 @@
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
-    <li><details class="select">
-      <summary></summary>
-      <p><br><br></p>
-    </details></li>
-    <!-- ****************************** -->
-    <li><details class="select">
-      <summary></summary>
-      <p><br><br></p>
-    </details></li>
-    <!-- ****************************** -->
-   
+
   </ol>
   <!-- ////////////////////////////////// -->
 
@@ -112,6 +122,17 @@
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+
     <li><details class="select">
       <summary></summary>
       <p><br><br></p>
@@ -153,7 +174,12 @@
       </details></li>
       <!-- ****************************** -->
       <li><details class="select">
-        <summary>Metanoia</summary>
+        <summary></summary>
+        <p><br><br></p>
+      </details></li>
+      <!-- ****************************** -->
+      <li><details class="select">
+        <summary></summary>
         <p><br><br></p>
       </details></li>
       <!-- ****************************** -->
@@ -201,6 +227,16 @@
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
   </ol>
   <!-- ////////////////////////////////// -->
 
@@ -210,6 +246,16 @@
   <h2 class="subtitulo"></h2>
    <!-- /////////////////////////////////////// -->
    <ol>
+    <li><details class="select">
+      <summary></summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
     <li><details class="select">
       <summary></summary>
       <p><br><br></p>
@@ -280,6 +326,16 @@
         <p><br><br></p>
       </details></li>
       <!-- ****************************** -->
+      <li><details class="select">
+        <summary></summary>
+        <p><br><br></p>
+      </details></li>
+      <!-- ****************************** -->
+      <li><details class="select">
+        <summary></summary>
+        <p><br><br></p>
+      </details></li>
+      <!-- ****************************** -->
      
     </ol>
     <!-- ////////////////////////////////// -->
@@ -306,6 +362,15 @@
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
+      <summary></summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->  <li><details class="select">
       <summary></summary>
       <p><br><br></p>
     </details></li>
