--- a/lectio/mateo/mateo1.html
+++ b/lectio/mateo/mateo1.html
@@ -229,21 +229,36 @@
         <br>	<br>
         Conclusión	<br>
         El Magisterio de la Iglesia ve en Mateo 1,1-17 un testimonio clave de que Jesús es el Mesías esperado, el centro de la historia de la salvación, y el cumplimiento de la alianza de Dios con la humanidad. También subraya que Dios actúa en la historia concreta, utilizando a personas frágiles y pecadoras para realizar su plan de salvación.	<br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
+         
         <br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
       <summary>Metanoia</summary>
-      <p><br><br></p>
+      <ol>
+        <li>Iniciativa del Señor
+          <ol>
+            <li>Dios es quien guía la historia</li>
+            <li>También la de cada persona</li>
+            <li>Lo hace a algunas veces, a través de personas, frágiles y pecadoras para realizar la salvación</li>
+            <li></li>
+          </ol>
+        </li>
+        <li>Discernimiento <ol>
+          <li>Se trata de primero convertirme al Señor</li>
+          <li>Luego de ordenar la realidad, en la medida de mis posibilidades a la Voluntad del Señor</li>
+          <li>A esto es lo que se llama el Bien</li>
+          <li></li>/ol></li>
+        <li>Oración <ol>
+          <li>En la presencia del Señor elegir una ruta de acción</li>
+          <li></li>
+          <li></li>
+        </ol></li>
+        <li>Conocimiento del Señor <ol>
+          <li>Clarificado y aplicado en la oración</li>
+          <li>Evaluado después de la acción</li>
+        </ol></li>
+      </ol>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
