--- a/noviciado/01formacion.html
+++ b/noviciado/01formacion.html
@@ -36,21 +36,27 @@
       <h1> TEMAS</h1>
       <div>
         <ol>
-          <li class="li"><a href="../lectio/intro.html">LECTIO DIVINA</a></li>
+          <h3 class="cita">Oración</h3>
+          <li class="li"><a href="../discretio/index.html">DISCRETIO</a></li>
           <li class="li"><a href="../oracion/oracion.html">ORACIÓN</a></li>
+          <li class="li"><a href="../lectio/intro.html">LECTIO DIVINA</a></li>
+<h3 class="cita">Formación</h3>
           <li class="li"><a href="../liturgia/liturgia.html">LITURGIA</a></li>
           <li class="li"><a href="../noviciado/historiaCarmelita.html">ORDEN CARMELITA SEGLAR</a></li>
           <li class="li"><a href="../historia/index.html">HISTORIA DE LA IGLESIA</a></li>
           <li class="li"><a href="../doctrinaSocial/index.html">DOCTRINA SOCIAL</a></li>
           <li class="li"><a href="../Magisterio/index.html">MAGISTERIO</a></li>
           <h2 class="cita"></h2>
+          <h3 class="cita">Personal</h3>
           <li class="li"><a href="../Ajedrez/index.html">AJEDREZ</a></li>
           <li class="li"><a href="../musica/">MÚSICA</a></li>
+          <li class="li"><a href="#1">HORARIO</a></li>
+          <li class="li"><a href="#8">METANOIA</a></li>
         </ol>
       </div>
     </section>
     <!-- /////////////////////////////////////////////////////////////////////////////// -->
-   <section>
+   <section id="1">
     <h2 class="subtitulo">Lunes</h2>
    <!-- /////////////////////////////////////// -->
    <ol>
@@ -778,65 +784,26 @@
   </ol>
 </section>
 <!-- ////////////////////////////////// -->
-<section id="5">
+<section id="8">
   <h2 class="cita">METANOIA</h2>
   <ol>
-    <li><details class="select">
-      <summary>La oración</summary>
-      <p>La oración es un proceso de encuentro. <br>
-        primero será quizás al iniciar y terminar el día, luego en el inicio de cada acción relevante y poco a poco será una oración continua es decir un permanente caminar con el Señor<br><br>
-      <ol>
-        <li>Por eso es necesario fijar una determinada hora o momento</li>
-        <li>Al iniciar y terminar el día, y a la hora de comer </li>
-        <li>Y al iniciar cada acción importante</li>
-        <li>Sin oración es imposible cualquier bien, el bien nace con la oración</li>
-        <li>Apertura a la novedad de cada día, oración y discernimiento como docilidad al ES</li>
-        <li>Arrepentimiento, confesión, perdón de pecados y conversión; como camino del examen de conciencia</li>
-   
-      </ol></p>
-    </details></li>
-    <!-- ****************************** -->
-    <li><details class="select">
-      <summary>Lectura de la Palabra</summary>
-      <p>El encuentro con el Señor tiene una finalidad central que en mi caso es mi conversión<br><br>
-      <b><ol>
-        <li>Lectura de lunes a viernes</li>
-        <li>Meditación durante el día, en todo momento posible </li>
-        <li>Y durante la noche en mi rosario</li>
-        <li>Jesús mensaje y mensajero de todo y en todo</li>
-        <li>La Biblia leída en clave de amor </li>
-      </ol></b>
-      </p>
-    </details></li>
-    <!-- ****************************** -->
-    <li><details class="select">
-      <summary>Examen de Conciencia</summary>
-      <p>El objetivo es ser consciente de todo aquello que debo mejorar<br><br>
-      <b><ol>
-        <li>Cada vez que haga algo y me de cuenta anotar y enmendar</li>
-        <li>Reflexionar antes del rosario, cual es su causa en mi y como me invita a una transformación</li>
-        <li>Vivir de tal manera que se elimine, quizás poco a poco, de mi vida el mal</li>
-        <li>Arrepentimiento, confesión, perdón de pecados y propósito de enmienda</li>
-        <li>La conversión implica la fe, esperanza y amor</li>
-        <li></li>
-        <li></li>
-      </ol></b>
-      </p>
-    </details></li>
-    <!-- ****************************** -->
-    <li><details class="select">
-      <summary>Apertura a la Novedad</summary>
-      <p>Dios nos invita a ser nuevos, por un camino que solo el sabe, por eso aceptar el pan nuestro y la novedad nuestra de cada día<br><br>
-      <b>
-        <ol>
-          <li>En la oración entregar el día al Señor</li>
-          <li>Aceptar toda realidad como primer paso para ser mejor y mejorar la realidad</li>
-          <li>Dios se hace presente en la novedad</li>
-          <li>Examinar como reacciono a la novedad, la agradable y la otra</li>
-        </ol>
-      </b></p>
-    </details></li>
-    <!-- ****************************** -->
+      <!-- ****************************** -->
+       <h3 class="cita">Domini Consilium</h3>
+       <li><details class="select">
+         <summary>Apertura a la Novedad</summary>
+         <p>La iniciativa siempre es del Señor </p>
+        <p>Dios nos invita a ser nuevos, por un camino que solo el sabe, por eso aceptar el pan nuestro como la novedad nuestra de cada día<br><br>
+        <b>
+          <ol>
+            <li>En la oración entregar el día al Señor</li>
+            <li>Aceptar toda realidad como primer paso para ser mejor y mejorar la realidad</li>
+            <li>Dios se hace presente en la novedad</li>
+            <li>Examinar como reacciono a la novedad, la agradable y la otra</li>
+          </ol>
+        </b></p>
+      </details></li>
+      <!-- ****************************** -->
+       
     <li><details class="select">
       <summary>El Llamado</summary>
       <p>Es universal, todos estamos llamados a ser uno con Cristo<br><br>
@@ -851,9 +818,10 @@
       </p>
     </details></li>
     <!-- ****************************** -->
+     
     <li><details class="select">
       <summary>El Reino: El Bien</summary>
-      <p>La construcción del reino es una acción del Espíritu Santo, que se manifiesta en la oración y la obediencia a su iglesia<br><br>
+      <p>Venga a nosotros tu Reino<br><br> La construcción del reino es una acción del Espíritu Santo, que se manifiesta en la oración y la obediencia a su iglesia<br><br>
       <b>
         <ol>
           <li>La misión comienza con una comunidad de discípulos.</li>
@@ -870,9 +838,73 @@
       </b></p>
     </details></li>
     <!-- ****************************** -->
+      <li><details class="select">
+        <summary></summary>
+        <p><br><br></p>
+      </details></li>
+      <!-- ****************************** -->
+      <h3 class="cita">Discretio</h3>
+      <li><details class="select">
+        <summary>Examen de Conciencia</summary>
+        <p>El objetivo es ser consciente de todo aquello que debo mejorar<br><br>
+        <b><ol>
+          <li>Cada vez que haga algo y me de cuenta anotar y enmendar</li>
+          <li>Reflexionar antes del rosario, cual es su causa en mi y como me invita a una transformación</li>
+          <li>Vivir de tal manera que se elimine, quizás poco a poco, de mi vida el mal</li>
+          <li>Arrepentimiento, confesión, perdón de pecados y propósito de enmienda</li>
+          <li>La conversión implica la fe, esperanza y amor</li>
+          <li></li>
+          <li></li>
+        </ol></b>
+        </p>
+      </details></li>
+      <!-- ****************************** -->
+      <li><details class="select">
+        <summary></summary>
+        <p><br><br></p>
+      </details></li>
+      <!-- ****************************** -->
+    <h3 class="cita">Oratio</h3>
+    <li><details class="select">
+      <summary>La oración</summary>
+      <p>La oración es un proceso de encuentro. <br>
+        primero será quizás al iniciar y terminar el día, luego en el inicio de cada acción relevante y poco a poco será una oración continua es decir un permanente caminar con el Señor<br><br>
+      <ol>
+        <li>Por eso es necesario fijar una determinada hora o momento</li>
+        <li>Al iniciar y terminar el día, y a la hora de comer </li>
+        <li>Y al iniciar cada acción importante</li>
+        <li>Sin oración es imposible cualquier bien, el bien nace con la oración</li>
+        <li>Apertura a la novedad de cada día, oración y discernimiento como docilidad al ES</li>
+        <li>Arrepentimiento, confesión, perdón de pecados y conversión; como camino del examen de conciencia</li>
+   
+      </ol></p>
+    </details></li>
+    <!-- ****************************** -->
     <li><details class="select">
       <summary></summary>
       <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+  
+  
+  
+    <h3 class="cita">Lectio</h3>
+    <li><details class="select">
+      <summary>Lectura de la Palabra</summary>
+      <p>El encuentro con el Señor tiene una finalidad central que en mi caso es mi conversión<br><br>
+      <b><ol>
+        <li>Lectura de lunes a viernes</li>
+        <li>Meditación durante el día, en todo momento posible </li>
+        <li>Y durante la noche en mi rosario</li>
+        <li>Jesús mensaje y mensajero de todo y en todo</li>
+        <li>La Biblia leída en clave de amor </li>
+      </ol></b>
+      </p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Experiencia</summary>
+      <p>También conocemos al Señor desde nuestras experiencias al contrastar y discernir lo que creemos con lo vivido<br><br></p>
     </details></li>
     <!-- ****************************** -->
   </ol>
