--- a/lectio/mateo/index.html
+++ b/lectio/mateo/index.html
@@ -30,7 +30,7 @@
   <div>
     <ol>
       <li class="li"><a href="./mateo1.html"> 2 perícopas  </a></li>
-      <li class="li"><a href="./mateo2.html">  perícopas  </a></li>
+      <li class="li"><a href="./mateo2.html"> 4 perícopas  </a></li>
       <li class="li"><a href="./mateo3.html">  perícopas  </a></li>
       <li class="li"><a href="./mateo4.html">  perícopas  </a></li>
       <li class="li"><a href="./mateo5.html">  perícopas  </a></li>
