--- a/lectio/mateo/mateo2.html
+++ b/lectio/mateo/mateo2.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/style.css">
-  <title>APOLOGÉTICA</title>
+  <link rel="stylesheet" href="../../styles/style.css">
+  <title>MATEO2</title>
 </head>
 <body>
   <p id="alInicio" class="principio"></p>
@@ -13,11 +13,11 @@
         <p class="logo"> CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
         <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
-        <a href="../index.html" class="nombre">INICIO </a>
+        <a href="./index.html" class="nombre">INICIO </a>
       </div>
     </header> <br><br>
     <!-- ****************************************************************** -->
-<h1 class="init"></h1>
+<h1 class="init">MATEO 2</h1>
   <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
       <br>EDITH STEIN</h3>
 
@@ -29,7 +29,13 @@
   <h1> TEMAS</h1>
   <div>
     <ol>
-     li.li*7>a[href="#$"]
+     <li class="li"><a href="#1"></a></li>
+     <li class="li"><a href="#2"></a></li>
+     <li class="li"><a href="#3"></a></li>
+     <li class="li"><a href="#4"></a></li>
+     <li class="li"><a href="#5"></a></li>
+     <li class="li"><a href="#6"></a></li>
+     <li class="li"><a href="#7"></a></li>
 
     </ol>
 
