--- a/discretio/index.html
+++ b/discretio/index.html
@@ -29,7 +29,8 @@
   <h1>Temas </h1>
   <div>
     <ol>
-     <li class="li"><a href="#1">Praefatio</a></li>
+     <li class="li"><a href="#0">Praefatio</a></li>
+     <li class="li"><a href="#1">DIA 1</a></li>
      <li class="li"><a href="#2"></a></li>
      <li class="li"><a href="#3"></a></li>
      <li class="li"><a href="#4"></a></li>
@@ -42,7 +43,7 @@
   </div>
 </section>
 <!-- ****************************************************************** -->
-<section id="1">
+<section id="0">
   <h2 class="subtitulo">Introducción</h2>
    <!-- /////////////////////////////////////// -->
    <ol>
@@ -90,6 +91,56 @@
 
   </ol>
   <!-- ////////////////////////////////// -->
+
+</section>
+<!-- ****************************************************************** -->
+<section id="1">
+<!-- /////////////////////////////////////// -->
+<ol>
+  <li><details class="select">
+    <h3 class="cita">El desierto</h3>
+    <summary>Lugar de Tentaciones</summary>
+    <p>Mat 4:1   Entonces Jesús fue llevado por el Espíritu al desierto, para ser tentado por el diablo<br><br>Lugar de Tentación</p>
+  </details></li>
+  <!-- ****************************** -->
+  <li><details class="select">
+    <summary>Lugar de encuentro con Dios</summary>
+    <p>Éxo_3:1 Apacentando Moisés las ovejas de Jetro su suegro, sacerdote de Madián, llevó las ovejas a través del desierto, y llegó hasta Horeb, monte de Dios. <br>
+      Éxo_3:18  Y oirán tu voz; e irás tú, y los ancianos de Israel, al rey de Egipto, y le diréis: Jehová el Dios de los hebreos nos ha encontrado; por tanto, nosotros iremos ahora camino de tres días por el desierto, para que ofrezcamos sacrificios a Jehová nuestro Dios. <br><br></p>
+  </details></li>
+  <!-- ****************************** -->
+  <li><details class="select">
+    <summary>Es un lugar de Combate</summary>
+    <p>Por eso habla de tentaciones y Gracias. Ambas son buenas para el cristiano.lo preocupante es la indiferencia.<br><br>El alma solo aprovecha si esta preparada, por eso los ejercicios, que no es otra cosa que una preparación.</p>
+  </details></li>
+  <!-- ****************************** -->
+  <li><details class="select">
+    <summary>Disponer de un Desierto</summary>
+   <ol>
+    <li>Un lugar acondicionado para el silencio</li>
+    <li>Disponer una hora que sea del Señor</li>
+    <li>Encuentro solo entre dios y yo.</li>
+    <li>Esto nos dispone a vivir solo con Dios, siempre en esa actitud </li>
+   </ol>
+  </details></li>
+  <!-- ****************************** -->
+  <li><details class="select">
+    <summary>METANOIA</summary>
+   <ol>
+    <li>Un Lugar [El desierto, la soledad]</li>
+    <li>Una hora [El tiempo y yo somos de Dios] </li>
+    <li>Oración [Silencio y Palabra] </li>
+   </ol>
+  </details></li>
+  <!-- ****************************** -->
+  <li><details class="select">
+    <summary></summary>
+    <p><br><br></p>
+  </details></li>
+  <!-- ****************************** -->
+ 
+</ol>
+<!-- ////////////////////////////////// -->
 
 </section>
 <!-- ****************************************************************** -->
