--- a/lectio/mateo/mateo1.html
+++ b/lectio/mateo/mateo1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -263,7 +263,12 @@
     <!-- ****************************** -->
     <li><details class="select">
       <summary></summary>
-      <p><br><br></p>
+        <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
     </details></li>
     <!-- ****************************** -->
    
@@ -595,12 +600,23 @@
     <!-- ****************************** -->
     <li><details class="select">
       <summary>Metanoia</summary>
-      <p><br><br></p>
+      <ol>
+        <li>Dios nos guía y ayuda en todo momento</li>
+        <li>Cumple sus promesas de una manera que hay que aprender a ver</li>
+        <li>Dios muestra su unidad con la humanidad en cristo. Dios y hombre verdaderos.</li>
+        <li>Muestra como es Dios y como debe de ser el hombre </li>
+        <li>Asumida la Voluntad de dios la obediencia se manifiesta como confianza y coherencia</li>
+      </ol>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
       <summary></summary>
-      <p><br><br></p>
+        <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
     </details></li>
     <!-- ****************************** -->
    
